--- a/webroot/css/croogo-bootstrap.css
+++ b/webroot/css/croogo-bootstrap.css
@@ -151,9 +151,9 @@ a:hover {
     min-height: 1px;
     margin-left: 20px;
 }
-.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+/*.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
     width: 940px;
-}
+}*/
 .span12 {
     width: 940px;
 }
