--- a/webroot/css/croogo-bootstrap.css
+++ b/webroot/css/croogo-bootstrap.css
@@ -147,9 +147,9 @@ a:hover {
     clear: both;
 }
 [class*="span"] {
-    float: left;
+    float: right;
     min-height: 1px;
-    margin-left: 20px;
+    margin-right: 20px;
 }
 /*.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
     width: 940px;
@@ -239,17 +239,17 @@ a:hover {
 }
 .row-fluid [class*="span"] {
     display: block;
-    float: left;
+    float: right;
     width: 100%;
     min-height: 30px;
-    margin-left: 2.127659574468085%;
     *margin-left: 2.074468085106383%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    margin-right: 2.127659574468085%;
 }
 .row-fluid [class*="span"]:first-child {
-    margin-left: 0;
+    margin-right: 0;
 }
 .row-fluid .controls-row [class*="span"]+[class*="span"] {
     margin-left: 2.127659574468085%}
@@ -2697,7 +2697,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
     clear: both;
 }
 .nav-tabs>li, .nav-pills>li {
-    float: left;
+    float: right;
 }
 .nav-tabs>li>a, .nav-pills>li>a {
     padding-right: 12px;
@@ -5490,7 +5490,6 @@ h2.hidden-desktop {
 .tab-content {
     min-height: 200px;
     padding: 0;
-    margin-top: -20px;
     background-color: #fff;
     border: 0;
     -webkit-border-radius: 0 0 2px 2px;
