--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1559,7 +1559,7 @@ h4,
 h5,
 h6 {
   margin: 10px 0;
-  font-family: 'Open Sans';
+  font-family: Yekan,'Open Sans';
   font-weight: 300;
   color: #505458;
 }
