--- a/webroot/css/croogo-bootstrap.css
+++ b/webroot/css/croogo-bootstrap.css
@@ -1215,7 +1215,7 @@ table {
 .table th, .table td {
     padding: 8px;
     line-height: 20px;
-    text-align: left;
+    text-align: right;
     vertical-align: top;
     border-top: 1px solid #ddd;
 }
@@ -1963,15 +1963,15 @@ table td[class*="span"], table th[class*="span"], .row-fluid table td[class*="sp
 }
 .dropdown-submenu>a:after {
     display: block;
-    float: right;
+    float: left;
     width: 0;
     height: 0;
     margin-top: 5px;
-    margin-right: -10px;
-    border-color: transparent;
-    border-left-color: #ccc;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
+    margin-left: 45px;
+    border-color: transparent;    
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;    
+    border-right:5px solid #ccc;
     content: " "}
 .dropdown-submenu:hover>a:after {
     border-left-color: #fff;
@@ -3392,7 +3392,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
     display: inline;
 }
 .pagination ul>li>a, .pagination ul>li>span {
-    float: left;
+    float: right;
     padding: 4px 12px;
     line-height: 20px;
     text-decoration: none;
@@ -3413,19 +3413,19 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
     background-color: transparent;
 }
 .pagination ul>li:first-child>a, .pagination ul>li:first-child>span {
-    border-left-width: 1px;
-    -webkit-border-bottom-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    -webkit-border-top-left-radius: 4px;
-    border-top-left-radius: 4px;
+    border-right-width: 1px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
     -moz-border-radius-bottomleft: 4px;
     -moz-border-radius-topleft: 4px;
 }
 .pagination ul>li:last-child>a, .pagination ul>li:last-child>span {
-    -webkit-border-top-right-radius: 4px;
-    border-top-right-radius: 4px;
-    -webkit-border-bottom-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    -webkit-border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
     -moz-border-radius-topright: 4px;
     -moz-border-radius-bottomright: 4px;
 }
@@ -5326,10 +5326,10 @@ footer a:hover {
     color: #9d261d;
 }
 form.inline div {
-    float: left;
+    float: right;
 }
 .input.inline {
-    float: left;
+    float: right;
 }
 .input.inline label, .input.inline input, .input.inline select {
     display: inline-block;
@@ -5417,7 +5417,7 @@ h2.hidden-desktop {
     margin-top: 0;
 }
 .filter {
-    text-align: left;
+    text-align: right;
     background-color: #eee;
     -webkit-border-top-right-radius: 3px;
     border-top-right-radius: 3px;
@@ -5433,7 +5433,7 @@ h2.hidden-desktop {
     display: inline-block;
 }
 .filter .input label {
-    margin: 0 10px 0 0;
+    margin: 0 0 0 10px;
 }
 .filter input, .filter select {
     width: auto;
