--- a/webroot/css/rtl/style2.css
+++ b/webroot/css/rtl/style2.css
@@ -16,11 +16,11 @@
 
 
 .btn {
-  font: 14px/20px "tahoma", Helvetica, Arial, sans-serif;
+  font: 14px/20px Yekan,"tahoma", Helvetica, Arial, sans-serif;
 }
 
 
-body{  font-family: "tahoma";
+body{  font-family: Yekan,"tahoma";
 }
 
 
